feat: fix for new tokens

--- a/src/components/sbb-form-field/styles/sbb-form-field.component.scss
+++ b/src/components/sbb-form-field/styles/sbb-form-field.component.scss
@@ -6,30 +6,30 @@
 :host {
   display: block;
 
-  --text-color-label: var(--color-metal-default);
+  --text-color-label: var(--sbb-color-metal-default);
 
-  --text-color-input-default: var(--color-charcoal-default);
-  --text-color-input-error: var(--color-red125-default);
+  --text-color-input-default: var(--sbb-color-charcoal-default);
+  --text-color-input-error: var(--sbb-color-red125-default);
 
-  --border-color-default: var(--color-smoke-default);
-  --border-color-disabled: var(--color-graphite-default);
-  --border-color-error: var(--color-red125-default);
-  --border-color-focus: var(--color-charcoal-default);
+  --border-color-default: var(--sbb-color-smoke-default);
+  --border-color-disabled: var(--sbb-color-graphite-default);
+  --border-color-error: var(--sbb-color-red125-default);
+  --border-color-focus: var(--sbb-color-charcoal-default);
 
-  --background-color-default: var(--color-white-default);
-  --background-color-disabled: var(--color-milk-default);
-  --text-color-readonly: var(--color-granite-default);
+  --background-color-default: var(--sbb-color-white-default);
+  --background-color-disabled: var(--sbb-color-milk-default);
+  --text-color-readonly: var(--sbb-color-granite-default);
   --text-color-disabled: var(--border-color-disabled);
 
-  --input-height: 48; // TODO Design Token??
-  --input-padding-start: 19;
+  --input-height: 48px; // TODO Design Token??
+  --input-padding-start: 19px;
 
-  --input-with-icon-padding-inline-start: 44; //TODO Design Token?
+  --input-with-icon-padding-inline-start: 44px; //TODO Design Token?
 
   --icon-size: var(--size-icon-ui-small);
 
   @include mq($from: medium) {
-    --input-height: 56; // TODO Design Token??
+    --input-height: 56px; // TODO Design Token??
   }
 
   @include ifForcedColors {
@@ -60,14 +60,15 @@
 
   width: 100%;
   box-sizing: border-box;
-  height: pxToRem(var(--input-height));
-  padding-block-start: pxToRem(var(--input-padding-start));
-  padding-inline-start: pxToRem(var(--spacing-fixed-3x));
-  padding-inline-end: pxToRem(var(--spacing-fixed-3x));
+  height: var(--input-height);
+  padding-block-start: var(--input-padding-start);
+  padding-inline-start: (var(--sbb-spacing-fixed-3x));
+  padding-inline-end: var(--sbb-spacing-fixed-3x);
 
   background-color: var(--background-color-default);
-  border: pxToRem(1) solid var(--border-color-default);
-  border-radius: pxToRem(var(--border-radius-4x));
+  // to fix
+  border: 1px solid var(--border-color-default);
+  border-radius: var(--sbb-border-radius-4x);
 }
 
 ::slotted(.input:focus) {
@@ -96,7 +97,8 @@
   @include shadow-level-5-hard;
 
   @include ifForcedColors() {
-    border: pxToRem(1) solid CanvasText;
+    // to fix
+    border: 1px solid CanvasText;
   }
 }
 
@@ -106,7 +108,7 @@
 }
 
 .input-wrapper--with-icon .input {
-  padding-inline-start: pxToRem(var(--input-with-icon-padding-inline-start));
+  padding-inline-start: var(--input-with-icon-padding-inline-start);
 }
 
 .input-wrapper--error .input {
@@ -119,14 +121,14 @@
 .input-label {
   @include text-xs--regular();
   position: absolute;
-  inset-block-start: pxToRem(var(--spacing-fixed-1x));
-  inset-block-end: pxToRem(var(--spacing-fixed-1x));
+  inset-block-start: var(--sbb-spacing-fixed-1x);
+  inset-block-end: var(--sbb-spacing-fixed-1x);
   inset-inline-start: 0;
 
   display: flex;
   max-width: 100%;
-  padding-inline-start: pxToRem(var(--spacing-fixed-3x));
-  padding-inline-end: pxToRem(var(--spacing-fixed-3x));
+  padding-inline-start: var(--sbb-spacing-fixed-3x);
+  padding-inline-end: var(--sbb-spacing-fixed-3x);
   color: var(--text-color-label);
   user-select: none;
   pointer-events: none;
@@ -147,15 +149,15 @@
 }
 
 .input-wrapper--with-icon .input-label {
-  padding-inline-start: pxToRem(var(--input-with-icon-padding-inline-start));
+  padding-inline-start: var(--input-with-icon-padding-inline-start);
 }
 
 // Icon
 // ----------------------------------------------
 .input__icon {
   @include absoluteCenterY;
-  inset-inline-start: pxToRem(var(--spacing-fixed-3x));
-  height: pxToRem(var(--icon-size));
+  inset-inline-start: var(--sbb-spacing-fixed-3x);
+  height: var(--icon-size);
   overflow: hidden;
   fill: currentColor;
 }
