--- a/src/components/sbb-form-error/styles/sbb-form-error.component.scss
+++ b/src/components/sbb-form-error/styles/sbb-form-error.component.scss
@@ -8,16 +8,16 @@
   @include text-xs--regular();
   display: flex;
   align-items: center;
-  color: var(--color-red125-default);
+  color: var(--sbb-color-red125-default);
 }
 
 ::slotted(.input-label-error__icon) {
-  line-height: pxToRem(var(--icon-size));
-  margin-inline-end: pxToRem(var(--spacing-fixed-1x));
+  line-height: var(--icon-size);
+  margin-inline-end: var(--spacing-fixed-1x);
 }
 
 ::slotted(.input-label-error__icon svg) {
-  width: pxToRem(var(--icon-size));
-  height: pxToRem(var(--icon-size));
+  width: var(--icon-size);
+  height: var(--icon-size);
   fill: currentColor;
 }
