--- a/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
+++ b/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
@@ -2,18 +2,6 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
-@mixin image-aspect-ratio-1-1 {
-  aspect-ratio: 1 / 1;
-}
-
-@mixin image-aspect-ratio-16-9 {
-  aspect-ratio: 16 / 9;
-}
-
-:host {
-  --panel-opacity-hover: 1;
-}
-
 .teaser-hero {
   position: relative;
   display: block;
@@ -23,9 +11,7 @@
   }
 
   &:hover {
-    ::slotted([slot='panel']) {
-      opacity: 1;
-    }
+    --panel-opacity-override: 1;
   }
 }
 
@@ -38,13 +24,12 @@
 }
 
 ::slotted([slot='image']) {
-  @include image-aspect-ratio-1-1;
-
   display: block;
   object-fit: cover;
   width: 100%;
+  aspect-ratio: 1 / 1;
 
   @include mq($from: small) {
-    @include image-aspect-ratio-16-9;
+    aspect-ratio: 16 / 9;
   }
 }
