--- a/src/components/sbb-form-error/styles/sbb-form-error.component.scss
+++ b/src/components/sbb-form-error/styles/sbb-form-error.component.scss
@@ -3,21 +3,27 @@
 // and default mode
 @include host-component-properties;
 
+:host {
+  position: relative;
+  // error height = text line-height 
+  min-height: calc(var(--sbb-typo-line-height-body-text) * var(--lyne-font-size-text-xs));
+  --icon-size: var(--sbb-size-icon-ui-small);
+}
+
 // Error
 ::slotted(.input-label-error) {
   @include text-xs--regular();
   display: flex;
   align-items: center;
   color: var(--sbb-color-red125-default);
+  position: absolute;
+  top: 0;
+  // reserving space for icon
+  left: calc(var(--icon-size) + var(--sbb-spacing-fixed-1x));
 }
 
-::slotted(.input-label-error__icon) {
+::slotted(.input-label-error__icon), svg {
   line-height: var(--icon-size);
-  margin-inline-end: var(--spacing-fixed-1x);
-}
-
-::slotted(.input-label-error__icon svg) {
-  width: var(--icon-size);
-  height: var(--icon-size);
-  fill: currentColor;
+  fill: var(--sbb-color-red125-default);
+  @include absoluteCenterY;
 }
