feat: form field css

--- a/src/components/sbb-form-error/styles/sbb-form-error.component.scss
+++ b/src/components/sbb-form-error/styles/sbb-form-error.component.scss
@@ -5,6 +5,7 @@
 
 :host {
   position: relative;
+  margin-block-start: var(--sbb-spacing-fixed-1x);
   // error height = text line-height
   min-height: calc(var(--sbb-typo-line-height-body-text) * var(--lyne-font-size-text-xs));
   --icon-size: var(--sbb-size-icon-ui-small);
