test: fix broken e2e test

--- a/src/components/sbb-toast/sbb-toast.e2e.html
+++ b/src/components/sbb-toast/sbb-toast.e2e.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Toast E2E</title>
-    <script nomodule src="../../../dist/lyne-components/lyne-components.js"></script>
+    <link href="../../../dist/lyne-components/lyne-components.css" rel="stylesheet" />
     <script type="module" src="../../../dist/lyne-components/lyne-components.esm.js"></script>
   </head>
   <script type="module">
