--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -1,17 +1,8 @@
-:host {
-  // only with inline-flex the component gets the right space
-  display: inline-flex;
-
-  --toggle-check-width: #{px-to-rem-build(48)};
-  --toggle-check-height: #{px-to-rem-build(28)};
-  --toggle-check-circle-diameter: #{px-to-rem-build(24)};
-  --toggle-check-circle-offset: #{px-to-rem-build(2)};
-}
-
 .toggle-check {
+  position: relative;
   display: inline-flex;
   align-items: center;
-  color: var(--sbb-color-charcoal-default);
+  color: var(--toggle-check-color);
   @include text-s--regular;
 }
 
@@ -26,17 +17,13 @@
 input[type='checkbox'] {
   position: absolute;
   opacity: 0;
-}
-
-.toggle-check__slider {
-  position: relative;
-  cursor: pointer;
-  display: inline-block;
-  overflow: hidden;
-  min-width: var(--toggle-check-width);
-  min-height: var(--toggle-check-height);
-  border-radius: #{px-to-rem-build(28)};
-  background-color: var(--sbb-color-smoke-default);
+  top: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  cursor: inherit;
+  z-index: -1;
 }
 
 .toggle-check__circle {
@@ -48,47 +35,58 @@ input[type='checkbox'] {
   width: var(--toggle-check-circle-diameter);
   height: var(--toggle-check-circle-diameter);
   border-radius: #{px-to-rem-build(24)};
-  background-color: var(--sbb-color-white-default);
+  background-color: var(--toggle-check-circle-background);
   will-change: transform;
-  box-shadow: 0 #{px-to-rem-build(1)} #{px-to-rem-build(8)} 0 var(--sbb-color-smoke-default);
   transform: translate(var(--toggle-check-circle-offset), -50%);
   transition: var(--sbb-animation-duration-6x);
 
-  // checked state
   .toggle-check--checked & {
     transform: translate(calc(100% - var(--toggle-check-circle-offset)), -50%);
   }
 }
 
-// checked state
-.toggle-check--checked .toggle-check__slider {
-  background-color: var(--sbb-color-red-default);
-}
-
 ::slotted([slot='icon']) {
-  fill: var(--sbb-color-red-default);
+  fill: var(--toggle-check-fill);
 }
 
-// disabled state
-.toggle-check--disabled {
-  cursor: not-allowed;
-  color: var(--sbb-color-graphite-default);
+.toggle-check__slider {
+  position: relative;
+  cursor: var(--toggle-check-cursor);
+  display: inline-block;
+  overflow: hidden;
+  min-width: var(--toggle-check-width);
+  height: var(--toggle-check-height);
+  border-radius: var(--toggle-check-height);
+  background-color: var(--toggle-check-background);
 
-  .toggle-check__slider {
-    cursor: not-allowed;
-    background-color: var(--sbb-color-cloud-default);
-
-    & .toggle-check__circle {
-      background-color: var(--sbb-color-milk-default);
-    }
+  .toggle-check--checked & {
+    background-color: var(--sbb-color-red-default);
   }
 
-  ::slotted([slot='icon']) {
-    fill: var(--sbb-color-granite-default);
+  input[type='checkbox']:focus-visible + & {
+    @include focusOutline;
   }
 }
 
-// focus state
-input[type='checkbox']:focus-visible + .toggle-check__slider {
-  @include focusOutline;
+:host {
+  // We use inline-flex here to avoid leaking white space due to the svg element.
+  display: inline-flex;
+
+  --toggle-check-color: var(--sbb-color-charcoal-default);
+  --toggle-check-background: var(--sbb-color-smoke-default);
+  --toggle-check-fill: var(--sbb-color-red-default);
+  --toggle-check-circle-background: var(--sbb-color-white-default);
+  --toggle-check-width: #{px-to-rem-build(48)};
+  --toggle-check-height: #{px-to-rem-build(28)};
+  --toggle-check-circle-diameter: #{px-to-rem-build(24)};
+  --toggle-check-circle-offset: #{px-to-rem-build(2)};
+  --toggle-check-cursor: pointer;
+
+  &.toggle-check--disabled {
+    --toggle-check-color: var(--sbb-color-graphite-default);
+    --toggle-check-background: var(--sbb-color-cloud-default);
+    --toggle-check-fill: var(--sbb-color-granite-default);
+    --toggle-check-circle-background: var(--sbb-color-milk-default);
+    --toggle-check-cursor: not-allowed;
+  }
 }
