feat: add sbb-tab-title component

--- a/src/components/sbb-tab-amount/sbb-tab-amount.scss
+++ b/src/components/sbb-tab-amount/sbb-tab-amount.scss
@@ -10,6 +10,6 @@ span {
   @include text;
 
   vertical-align: middle;
-  color: var(--sbb-amount-color-override, var(--sbb-color-metal-default));
+  line-height: 0;
   padding-inline-start: var(--sbb-spacing-fixed-1x);
 }
