refactor: 1239 sbb-link refactor
- change content-text from property to slot
- add button condition if no href is present and corresponding attribute support
- add staic-span condition/config

BREAKING CHANGE:
- the text is now set via slot (default slot)
- the aria-label has its own property instead of the former text property

--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -39,6 +39,10 @@
   }
 }
 
+button.sbb-link {
+  @include buttonReset;
+}
+
 .sbb-link--block-negative,
 .sbb-link--inline-negative {
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
