feat: form field css fix

--- a/src/components/sbb-form-error/sbb-form-error.scss
+++ b/src/components/sbb-form-error/sbb-form-error.scss
@@ -29,8 +29,5 @@
 
 .sbb-icon {
   @include absoluteCenterY;
-}
-
-.sbb-icon svg {
-  fill: var(--sbb-color-red125-default);
+  color: var(--sbb-color-red125-default);
 }
