--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -187,6 +187,10 @@
   padding-block-start: var(--sbb-spacing-fixed-1x);
 }
 
+.form--disabled .input-label {
+  color: var(--text-color-disabled);
+}
+
 .form--prefix .input-label {
   padding-inline-start: var(--input-with-icon-padding-inline);
 }
